# cv_nav

./: .gitignore  README.md  main.py  pyproject.toml  resources.md
src/3d_conversion/: __main__.py  task_description.md
src/dpp/: __main__.py  path_from_srt_ref.ipynb  task_description.md
src/signal_bot/: README.md  config.ini
src/tak_bot/: __main__.py  task_description.md  test_udp_client.py
