[project]
name = "cv-nav"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "pillow>=12.0.0",
    "pycollada>=0.9.2",
    "pyproj>=3.7.2",
    "scipy>=1.16.3",
    "trimesh>=4.10.1",
    # DPP module dependencies
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "filterpy>=1.4.5",
    "pytak>=7.0.2",
    "takproto>=3.0.1",
    "ffmpeg-python>=0.2.0",
    "pandas>=2.3.3",
]
